# wavephoenix

./: README.md
.github/workflows/: build.yml  test.yml
bootloader/: .gitignore  README.md  bootloader-efr32xg22e.slcp  bootloader-rf-bm-bg22c3.slcp
firmware/: .gersemirc  .gitignore  CMakeLists.txt  CMakePresets.json  requirements.txt
firmware/cmake/: openocd.cmake  ota.cmake
firmware/cmake/toolchains/: arm-cortex-m33.cmake  arm-cortex-m4.cmake
firmware/ldscripts/: efr32xg22.ld  efr32xg24.ld
firmware/libsi/: CMakeLists.txt  README.md
firmware/libsi/include/si/: commands.h  crc8.h  si.h
firmware/libsi/include/si/device/: gc_controller.h  n64_controller.h
firmware/libsi/src/: commands.c  crc8.c
firmware/libsi/src/device/: gc_controller.c  n64_controller.c
firmware/libsi/src/platform/efr32/: si_efr32.c
firmware/libsi/test/: CMakeLists.txt  test_commands.c  test_gc_controller.c  test_main.c
firmware/libwavebird/: CMakeLists.txt  README.md
firmware/libwavebird/config/rail/: radio_settings_efr32xg1.radioconf  radio_settings_efr32xg14.radioconf  radio_settings_efr32xg22.radioconf
firmware/libwavebird/include/wavebird/: bch3121.h  message.h  packet.h  radio.h
firmware/libwavebird/src/: bch3121.c  packet.c
firmware/libwavebird/src/platform/efr32/: radio_efr32.c
firmware/libwavebird/test/: CMakeLists.txt  fixtures.h  test_bch3121.c  test_main.c  test_packet.c
firmware/receiver/: CMakeLists.txt  README.md
firmware/receiver/config/efr32xg22e/: board_config.h
firmware/receiver/config/rf-bm-bg22c3/: board_config.h
firmware/receiver/src/: app_properties.c  button.c  button.h  channel_wheel.c  channel_wheel.h  led.c  led.h  main.c  serial.c  serial.h  settings.c  settings.h  version.h
hardware/mini-receiver/: README.md  ibom.html
hardware/mini-receiver/KiCad/: mini-receiver.kicad_dru  mini-receiver.kicad_pcb  mini-receiver.kicad_pro  mini-receiver.kicad_sch  sym-lib-table
hardware/mini-receiver/KiCad/project-footprints/: CONN-SMD_SR1.00-WS-4P.step  KEY-SMD_4P-L5.2-W5.2-H1.5-LS6.4-P3.70.step  LED0805-R-RD.kicad_mod  SW-SMD_4P-L5.1-W5.1-P3.70-LS6.5-TL-2.kicad_mod
hardware/mini-receiver/KiCad/project-symbols/: TS-1187A-B-A-B.kicad_sym
hardware/mini-receiver/case/: Button Actuator.stl  Front Cover.stl  Main Case.stl  WavePhoenix Mini Receiver.3mf
hardware/mini-receiver/gerbers/: BOM-mini-receiver.csv  CPL-mini-receiver.csv
